--- a/css/style.css
+++ b/css/style.css
@@ -1,9 +1,16 @@
+body {
+  font-family: "Rubik", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 .nav-container {
   padding: 11px 0;
 }
 .nav-container .nav-catalog button {
-  padding: 8px;
-  font-family: "Rubik", sans-serif;
+  padding: 8px 16px 8px 8px;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -23,7 +30,6 @@
 .nav-container .nav-input form input {
   padding: 8px 16px;
   width: 100%;
-  font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 16px;
@@ -50,7 +56,6 @@
   font-size: 24px;
 }
 .nav-container .nav-right .nav__menus-icons .nav__menu-icon p {
-  font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 400;
   font-size: 12px;
@@ -107,7 +112,6 @@
 }
 
 .nav-link {
-  font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -139,4 +143,209 @@
   top: 0px;
   width: 100%;
   z-index: 1;
+}
+
+main {
+  padding: 80px 0;
+  background: #fbf8ec;
+}
+main .container h2 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 36px;
+  line-height: 150%;
+  color: #414141;
+}
+
+.home-container {
+  padding-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px 40px;
+}
+@media (min-width: 550px) {
+  .home-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 768px) {
+  .home-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+.home-container .card {
+  background: #ffffff;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+.home-container .card .card__descriptions {
+  padding: 8px;
+}
+.home-container .card .card__prices {
+  display: flex;
+  justify-content: space-between;
+}
+.home-container .card .card__prices h4 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 150%;
+  color: #414141;
+}
+.home-container .card .card__prices h5 {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #606060;
+}
+.home-container .card .card__prices p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 150%;
+  color: #bfbfbf;
+}
+.home-container .card .card__description p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #414141;
+}
+.home-container .card .card__button {
+  margin-top: 16px;
+  padding: 8px;
+  width: 100%;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #70c05b;
+  border: 1px solid #70c05b;
+  border-radius: 4px;
+  transition: 0.3s;
+}
+.home-container .card .card__button:hover {
+  color: #ffffff;
+  background: #ff6633;
+  border-radius: 4px;
+}
+
+.nova__head {
+  margin-top: 120px;
+}
+
+.novelties {
+  padding-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px 40px;
+}
+@media (min-width: 550px) {
+  .novelties {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 768px) {
+  .novelties {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+.novelties .novelties__card {
+  background: #ffffff;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+.novelties .novelties__card .novelties__card-descriptions {
+  padding: 8px;
+}
+.novelties .novelties__card .novelties__card-descriptions h4 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 150%;
+  color: #414141;
+}
+.novelties .novelties__card .novelties__card-descriptions p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #414141;
+}
+.novelties .novelties__card .novelties__card-button {
+  margin-top: 16px;
+  padding: 8px;
+  width: 100%;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #70c05b;
+  border: 1px solid #70c05b;
+  border-radius: 4px;
+  transition: 0.3s;
+}
+.novelties .novelties__card .novelties__card-button:hover {
+  color: #ffffff;
+  background: #ff6633;
+  border-radius: 4px;
+}
+
+.buy {
+  padding-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px 40px;
+}
+@media (min-width: 550px) {
+  .buy {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 768px) {
+  .buy {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+.buy .buy__card {
+  background: #ffffff;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+.buy .buy__card .buy__card-descriptions {
+  padding: 8px;
+}
+.buy .buy__card .buy__card-descriptions h4 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 18px;
+  line-height: 150%;
+  color: #414141;
+}
+.buy .buy__card .buy__card-descriptions p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #414141;
+}
+.buy .buy__card .buy__card-button {
+  margin-top: 16px;
+  padding: 8px;
+  width: 100%;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 150%;
+  color: #70c05b;
+  border: 1px solid #70c05b;
+  border-radius: 4px;
+  transition: 0.3s;
+}
+.buy .buy__card .buy__card-button:hover {
+  color: #ffffff;
+  background: #ff6633;
+  border-radius: 4px;
 }
