--- a/style.scss
+++ b/style.scss
@@ -1,3 +1,11 @@
+body {
+  font-family: "Rubik", sans-serif;
+}
+
+html {
+  scroll-behavior: smooth;
+}
+
 .nav-container {
   padding: 11px 0;
   .nav-catalog {
@@ -5,8 +13,7 @@
       i {
         font-size: 24px;
       }
-      padding: 8px;
-      font-family: "Rubik", sans-serif;
+      padding: 8px 16px 8px 8px;
       font-style: normal;
       font-weight: 400;
       font-size: 16px;
@@ -24,7 +31,7 @@
       input {
         padding: 8px 16px;
         width: 100%;
-        font-family: "Rubik", sans-serif;
+
         font-style: normal;
         font-weight: 400;
         font-size: 16px;
@@ -60,7 +67,6 @@
           font-size: 24px;
         }
         p {
-          font-family: "Rubik", sans-serif;
           font-style: normal;
           font-weight: 400;
           font-size: 12px;
@@ -121,7 +127,6 @@
 }
 
 .nav-link {
-  font-family: "Rubik", sans-serif;
   font-style: normal;
   font-weight: 700;
   font-size: 16px;
@@ -153,4 +158,204 @@
   top: 0px;
   width: 100%;
   z-index: 1;
+}
+
+main {
+  padding: 80px 0;
+  background: #fbf8ec;
+  .container {
+    h2 {
+      font-style: normal;
+      font-weight: 700;
+      font-size: 36px;
+      line-height: 150%;
+      color: #414141;
+    }
+  }
+}
+
+.home-container {
+  padding-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px 40px;
+  @media (min-width: 550px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .card {
+    background: #ffffff;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    .card__descriptions {
+      padding: 8px;
+    }
+    .card__prices {
+      display: flex;
+      justify-content: space-between;
+      h4 {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 150%;
+        color: #414141;
+      }
+      h5 {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        color: #606060;
+      }
+      p {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 12px;
+        line-height: 150%;
+        color: #bfbfbf;
+      }
+    }
+    .card__description {
+      p {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        color: #414141;
+      }
+    }
+    .card__button {
+      margin-top: 16px;
+      padding: 8px;
+      width: 100%;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 150%;
+      color: #70c05b;
+      border: 1px solid #70c05b;
+      border-radius: 4px;
+      transition: 0.3s;
+      &:hover {
+        color: #ffffff;
+        background: #ff6633;
+        border-radius: 4px;
+      }
+    }
+  }
+}
+
+.nova__head {
+  margin-top: 120px;
+}
+
+.novelties {
+  padding-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px 40px;
+  @media (min-width: 550px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .novelties__card {
+    background: #ffffff;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    .novelties__card-descriptions {
+      padding: 8px;
+      h4 {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 150%;
+        color: #414141;
+      }
+      p {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        color: #414141;
+      }
+    }
+    .novelties__card-button {
+      margin-top: 16px;
+      padding: 8px;
+      width: 100%;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 150%;
+      color: #70c05b;
+      border: 1px solid #70c05b;
+      border-radius: 4px;
+      transition: 0.3s;
+      &:hover {
+        color: #ffffff;
+        background: #ff6633;
+        border-radius: 4px;
+      }
+    }
+  }
+}
+
+.buy {
+  padding-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px 40px;
+  @media (min-width: 550px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(4, 1fr);
+  }
+
+  .buy__card {
+    background: #ffffff;
+    box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+    border-radius: 4px;
+    .buy__card-descriptions {
+      padding: 8px;
+      h4 {
+        font-style: normal;
+        font-weight: 700;
+        font-size: 18px;
+        line-height: 150%;
+        color: #414141;
+      }
+      p {
+        font-style: normal;
+        font-weight: 400;
+        font-size: 16px;
+        line-height: 150%;
+        color: #414141;
+      }
+    }
+    .buy__card-button {
+      margin-top: 16px;
+      padding: 8px;
+      width: 100%;
+      font-style: normal;
+      font-weight: 400;
+      font-size: 16px;
+      line-height: 150%;
+      color: #70c05b;
+      border: 1px solid #70c05b;
+      border-radius: 4px;
+      transition: 0.3s;
+      &:hover {
+        color: #ffffff;
+        background: #ff6633;
+        border-radius: 4px;
+      }
+    }
+  }
 }
