--- a/style.scss
+++ b/style.scss
@@ -6,17 +6,58 @@ html {
   scroll-behavior: smooth;
 }
 
+@media (min-width: 100px) {
+  :root {
+    font-size: 13px;
+  }
+}
+
+@media (min-width: 576px) {
+  :root {
+    font-size: 14px;
+  }
+}
+
+@media (min-width: 768px) {
+  :root {
+    font-size: 15px;
+  }
+}
+
+@media (min-width: 992px) {
+  :root {
+    font-size: 16px !important;
+  }
+}
+
 .nav-container {
   padding: 11px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  @media (max-width: 650px) {
+    flex-direction: column;
+    align-content: center;
+    gap: 20px;
+  }
   .nav-catalog {
+    @media (max-width: 900px) {
+      p {
+        display: none;
+      }
+      button {
+        padding: 8px !important;
+      }
+    }
     button {
       i {
         font-size: 24px;
       }
+
       padding: 8px 16px 8px 8px;
       font-style: normal;
       font-weight: 400;
-      font-size: 16px;
+      font-size: 1rem;
       line-height: 150%;
       color: #ffffff;
       background: #70c05b;
@@ -30,11 +71,10 @@ html {
       position: relative;
       input {
         padding: 8px 16px;
-        width: 100%;
-
+        width: 90%;
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 150%;
         color: #8f8f8f;
         background: #ffffff;
@@ -48,7 +88,7 @@ html {
       i {
         position: absolute;
         top: 20%;
-        left: 90%;
+        right: 12%;
       }
     }
   }
@@ -57,6 +97,14 @@ html {
       button {
         border: none;
         background-color: transparent !important;
+      }
+      @media (max-width: 1000px) {
+        p {
+          display: none;
+        }
+        button {
+          display: none;
+        }
       }
     }
   }
@@ -69,7 +117,7 @@ html {
         p {
           font-style: normal;
           font-weight: 400;
-          font-size: 12px;
+          font-size: 0.75rem;
           line-height: 150%;
           color: #414141;
         }
@@ -78,20 +126,36 @@ html {
   }
 }
 
+@media (max-width: 600px) {
+  .nav__scroll {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+    overflow-x: scroll;
+    overflow-y: scroll;
+  }
+  .nav__scroll::-webkit-scrollbar {
+    display: none;
+  }
+}
+
 .navbar-nav {
-  --bs-nav-link-padding-x: 0;
-  --bs-nav-link-padding-y: 0.5rem;
-  --bs-nav-link-font-weight: ;
-  --bs-nav-link-color: var(--bs-navbar-color);
-  --bs-nav-link-hover-color: var(--bs-navbar-hover-color);
-  --bs-nav-link-disabled-color: var(--bs-navbar-disabled-color);
-  display: flex;
-  gap: 40px;
-  justify-content: space-between !important;
-  flex-direction: row;
+  display: grid;
+  grid-gap: 40px 40px;
+  grid-template-columns: repeat(4, 1fr);
+  justify-content: space-between;
   padding-left: 0;
   margin-bottom: 0;
   list-style: none;
+  @media (max-width: 700px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (max-width: 500px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (max-width: 400px) {
+    grid-template-columns: 1fr;
+  }
 }
 
 .navbar {
@@ -129,7 +193,7 @@ html {
 .nav-link {
   font-style: normal;
   font-weight: 700;
-  font-size: 16px;
+  font-size: 1rem;
   line-height: 150%;
   color: #414141;
 }
@@ -167,7 +231,7 @@ main {
     h2 {
       font-style: normal;
       font-weight: 700;
-      font-size: 36px;
+      font-size: 2.25rem;
       line-height: 150%;
       color: #414141;
     }
@@ -199,21 +263,21 @@ main {
       h4 {
         font-style: normal;
         font-weight: 700;
-        font-size: 18px;
+        font-size: 1.125rem;
         line-height: 150%;
         color: #414141;
       }
       h5 {
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 150%;
         color: #606060;
       }
       p {
         font-style: normal;
         font-weight: 400;
-        font-size: 12px;
+        font-size: 0.75rem;
         line-height: 150%;
         color: #bfbfbf;
       }
@@ -222,7 +286,7 @@ main {
       p {
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 150%;
         color: #414141;
       }
@@ -233,7 +297,7 @@ main {
       width: 100%;
       font-style: normal;
       font-weight: 400;
-      font-size: 16px;
+      font-size: 1rem;
       line-height: 150%;
       color: #70c05b;
       border: 1px solid #70c05b;
@@ -273,14 +337,14 @@ main {
       h4 {
         font-style: normal;
         font-weight: 700;
-        font-size: 18px;
+        font-size: 1rem;
         line-height: 150%;
         color: #414141;
       }
       p {
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 150%;
         color: #414141;
       }
@@ -291,7 +355,7 @@ main {
       width: 100%;
       font-style: normal;
       font-weight: 400;
-      font-size: 16px;
+      font-size: 1rem;
       line-height: 150%;
       color: #70c05b;
       border: 1px solid #70c05b;
@@ -327,14 +391,14 @@ main {
       h4 {
         font-style: normal;
         font-weight: 700;
-        font-size: 18px;
+        font-size: 1.125rem;
         line-height: 150%;
         color: #414141;
       }
       p {
         font-style: normal;
         font-weight: 400;
-        font-size: 16px;
+        font-size: 1rem;
         line-height: 150%;
         color: #414141;
       }
@@ -345,7 +409,7 @@ main {
       width: 100%;
       font-style: normal;
       font-weight: 400;
-      font-size: 16px;
+      font-size: 1rem;
       line-height: 150%;
       color: #70c05b;
       border: 1px solid #70c05b;
