--- a/css/style.css
+++ b/css/style.css
@@ -109,6 +109,13 @@ html {
   color: #414141;
 }
 
+@media (max-width: 600px) {
+  .nav__scroll {
+    flex-direction: column;
+    align-items: center;
+    gap: 20px;
+  }
+}
 .navbar-nav {
   display: grid;
   grid-gap: 40px 40px;
