--- a/style.scss
+++ b/style.scss
@@ -36,9 +36,20 @@ html {
   justify-content: space-between;
   align-items: center;
   @media (max-width: 650px) {
-    flex-direction: column;
-    align-content: center;
+    // flex-direction: column;
+    // align-content: center;
     gap: 20px;
+  }
+  .navbar__res-logo {
+    display: none;
+  }
+  @media (max-width: 650px) {
+    .navbar__res-logo {
+      display: block;
+    }
+    .navbar-brand {
+      display: none;
+    }
   }
   .nav-catalog {
     @media (max-width: 900px) {
@@ -47,6 +58,11 @@ html {
       }
       button {
         padding: 8px !important;
+      }
+    }
+    @media (max-width: 450px) {
+      button {
+        display: none !important;
       }
     }
     button {
@@ -126,11 +142,14 @@ html {
   }
 }
 
-@media (max-width: 600px) {
+@media (max-width: 550px) {
   .nav__scroll {
-    flex-direction: column;
+    // flex-direction: column;
     align-items: center;
     gap: 20px;
+  }
+  .nav-right {
+    display: none !important;
   }
 }
 
@@ -415,6 +434,138 @@ main {
         background: #ff6633;
         border-radius: 4px;
       }
+    }
+  }
+}
+
+.special {
+  padding-top: 40px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-gap: 40px 40px;
+  @media (max-width: 1000px) {
+    grid-template-columns: 1fr;
+  }
+  &__card {
+    padding: 30px;
+    display: flex;
+    align-items: center;
+    background: #e5ffde;
+    border-radius: 4px;
+    transition: 0.3s;
+    &:hover {
+      background: #fcd5ba;
+      box-shadow: 0px 8px 16px rgba(202, 147, 96, 0.5);
+    }
+    .special__card-body {
+      .special__card-body__left {
+        width: 50%;
+      }
+      .special__card-body__right {
+        width: 50%;
+      }
+    }
+  }
+}
+
+#sh,
+#ver,
+#kras,
+#diy {
+  display: none;
+}
+
+.shop__tabs {
+  .shop_btn.active {
+    background: #70c05b;
+    color: #606060;
+  }
+  button {
+    padding: 8px;
+    background-color: #f3f2f1;
+    border-radius: 4px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 150%;
+    color: #606060;
+    transition: 0.3s;
+    border: none;
+    &:hover {
+      background: #70c05b;
+      color: #606060;
+    }
+  }
+}
+.map__item {
+  display: none;
+}
+.map__item.active {
+  display: block !important;
+}
+
+.shop__items {
+  margin-top: 24px;
+  iframe {
+    width: 100%;
+  }
+}
+
+.articles {
+  margin-top: 40px;
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px 40px;
+  @media (min-width: 550px) {
+    grid-template-columns: repeat(2, 1fr);
+  }
+  @media (min-width: 768px) {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+
+.article__card {
+  background: #ffffff;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+.article__desc {
+  padding: 10px;
+  p {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 0.75rem;
+    line-height: 150%;
+    color: #8f8f8f;
+  }
+  h3 {
+    font-style: normal;
+    font-weight: 700;
+    font-size: 1.125rem;
+    line-height: 150%;
+    color: #414141;
+  }
+  .article__desription {
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    line-height: 150%;
+    color: #414141;
+  }
+  .article__button {
+    padding: 8px;
+    background: #e5ffde;
+    border-radius: 4px;
+    font-style: normal;
+    font-weight: 400;
+    font-size: 1rem;
+    border: none;
+    line-height: 150%;
+    color: #70c05b;
+    transition: 0.3s;
+    &:hover {
+      color: #ffffff;
+      background: #70c05b;
     }
   }
 }
