--- a/style.scss
+++ b/style.scss
@@ -1031,3 +1031,112 @@ main {
     border-radius: 4px;
   }
 }
+
+#popup-menu {
+  border: none;
+  background-color: transparent;
+  cursor: pointer !important;
+}
+
+.popup {
+  display: none;
+  .popup-container {
+    background: rgba(252, 213, 186, 0.8);
+    position: fixed;
+    top: 0;
+    left: 0;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+    z-index: 999;
+    justify-content: center;
+    .popup-menu {
+      position: relative;
+      padding: 0 80px 40px 80px;
+      background-color: #fff;
+      #popup-close {
+        background: #f3f2f1;
+        border-radius: 4px;
+        border: none;
+        position: absolute;
+        right: 0;
+        top: 0;
+        margin-bottom: 32px;
+      }
+      h3 {
+        margin: 82px 0 32px;
+        font-style: normal;
+        font-weight: 700;
+        font-size: 1.5rem;
+        line-height: 150%;
+        text-align: center;
+        color: #414141;
+      }
+      form {
+        p {
+          margin: 0;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 1.125rem;
+          line-height: 150%;
+          color: #8f8f8f;
+        }
+        input[type="text"] {
+          &:focus {
+            outline: none;
+          }
+          margin-bottom: 44px;
+          padding: 12px 16px;
+          font-style: normal;
+          font-weight: 400;
+          font-size: 1.5rem;
+          line-height: 150%;
+          color: #414141;
+          background: #ffffff;
+          border: 1px solid #70c05b;
+          box-shadow: 4px 8px 16px rgba(112, 192, 91, 0.2);
+          border-radius: 4px;
+        }
+      }
+      button[type="submit"] {
+        width: 100%;
+        padding: 16px;
+        border: none;
+        margin-bottom: 48px;
+        background: #fcd5ba;
+        border-radius: 4px;
+        font-style: normal;
+        font-weight: 400;
+        font-size: 1.5rem;
+        line-height: 150%;
+        text-align: center;
+        color: #ff6633;
+      }
+      .popup-registr {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        button {
+          padding: 4px 8px;
+          font-weight: 400;
+          font-size: 0.75rem;
+          line-height: 150%;
+          text-align: center;
+          color: #70c05b;
+          border: none;
+          border: 1px solid #70c05b;
+          border-radius: 4px;
+          background-color: #fff;
+        }
+        a {
+          font-weight: 400;
+          font-size: 0.75rem;
+          line-height: 150%;
+          text-align: center;
+          color: #606060;
+        }
+      }
+    }
+  }
+}
