--- a/css/style.css
+++ b/css/style.css
@@ -1012,6 +1012,9 @@ main .container h2 {
 }
 
 #popup-menu {
+  display: flex;
+  align-items: center;
+  gap: 20px;
   border: none;
   background-color: transparent;
   cursor: pointer !important;
