--- a/css/style.css
+++ b/css/style.css
@@ -992,6 +992,9 @@ main .container h2 {
   box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
   border-radius: 4px;
 }
+.search-cards .search-card .search_card-img img {
+  width: 100%;
+}
 .search-cards .search-card .search-content {
   padding: 8px;
 }
@@ -1065,6 +1068,17 @@ main .container h2 {
   color: #ffffff;
   background: #ff6633;
   border-radius: 4px;
+}
+
+.search_card-img {
+  position: relative;
+}
+.search_card-img #liked-btn {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: none;
+  background-color: transparent;
 }
 
 #popup-menu {
@@ -1623,4 +1637,252 @@ main .container h2 {
   color: #ff6633;
   background: #fcd5ba;
   border-radius: 4px;
+}
+
+.favorite-category {
+  gap: 40px;
+}
+@media (max-width: 768px) {
+  .favorite-category .favorite-filter,
+  .favorite-category .favorite-right {
+    width: 100% !important;
+  }
+}
+.favorite-category .favorite-filter {
+  margin-top: 40px;
+}
+.favorite-category .favorite-filter h4 {
+  padding: 10px;
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #414141;
+  background: #f3f2f1;
+  border-radius: 4px;
+}
+.favorite-category .favorite-filter .favorite_filter-price .filter_inputs-head {
+  margin: 40px 0 13px;
+}
+.favorite-category .favorite-filter .favorite_filter-price .filter_inputs-head p {
+  margin-bottom: 0;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #000000;
+}
+.favorite-category .favorite-filter .favorite_filter-price .filter_inputs-head button {
+  padding: 4px 8px;
+  background: #f3f2f1;
+  border-radius: 4px;
+  font-weight: 400;
+  font-size: 0.75rem;
+  border: none;
+  line-height: 150%;
+  color: #606060;
+}
+.favorite-category .favorite-filter .favorite_filter-price .filter_inputs-head button:focus {
+  outline: none;
+}
+.favorite-category .favorite-filter .favorite_filter-price .filter-inputs {
+  margin-bottom: 40px;
+}
+.favorite-category .favorite-filter .favorite_filter-price .filter-inputs input[type=text] {
+  padding: 8px 16px;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 28px;
+  color: #414141;
+  background: #ffffff;
+  border: 1px solid #bfbfbf;
+  border-radius: 4px;
+}
+.favorite-category .favorite-filter .favorite_filter-price .filter-inputs span {
+  margin: 0 4.5px;
+  width: 15px;
+  height: 1px;
+  background-color: #414141;
+}
+.favorite-category .favorite-filter .favorite_filter-price .filter-inputs input[type=range] {
+  width: 100%;
+  margin-top: 13px;
+}
+.favorite-category .favorite-filter .favorite_filter-price .favorite_filter-type {
+  display: flex;
+  flex-direction: column;
+  gap: 20px;
+}
+.favorite-category .favorite-filter .favorite_filter-price .favorite_filter-type p {
+  margin: 0;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #414141;
+}
+.favorite-category .favorite-filter .favorite_filter-in-stock {
+  margin: 40px 0;
+  display: flex;
+  gap: 10px;
+  align-items: center;
+}
+.favorite-category .favorite-filter .favorite_filter-in-stock button {
+  position: relative;
+  width: 46px;
+  height: 24px;
+  border: none;
+  background: #70c05b;
+  border-radius: 49px;
+}
+.favorite-category .favorite-filter .favorite_filter-in-stock button span {
+  position: absolute;
+  right: 2px;
+  top: 2px;
+  width: 20px;
+  height: 20px;
+  background: #ffffff;
+  border: 0.5px solid rgba(0, 0, 0, 0.04);
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.15), 0px 1px 1px rgba(0, 0, 0, 0.08);
+  border-radius: 100px;
+}
+.favorite-category .favorite-filter .favorite_filter-in-stock p {
+  margin: 0;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #414141;
+}
+.favorite-category .favorite-filter #apply {
+  padding: 8px;
+  width: 100%;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #ffffff;
+  background: #ff6633;
+  border-radius: 4px;
+  border: none;
+}
+.favorite-category .favorite-filter #apply:focus {
+  outline: none;
+}
+.favorite-category .favorite-right .favorite_products-btn {
+  margin: 40px 0;
+  width: 100%;
+  gap: 24px;
+}
+@media (max-width: 600px) {
+  .favorite-category .favorite-right .favorite_products-btn {
+    flex-direction: column;
+  }
+}
+.favorite-category .favorite-right .favorite_products-btn button {
+  padding: 8px;
+  border: none;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 150%;
+  color: #ffffff;
+  background: #70c05b;
+  border-radius: 4px;
+}
+.favorite-category .favorite-right .favorite_products-btn button:focus {
+  outline: none;
+}
+.favorite-category .favorite-right .favorite_products-btn button i {
+  font-size: 15px;
+}
+
+.favorite-products {
+  display: grid;
+  grid-template-columns: 1fr;
+  grid-gap: 40px;
+}
+@media (min-width: 576px) {
+  .favorite-products {
+    grid-template-columns: repeat(1, 1fr);
+  }
+}
+@media (min-width: 768px) {
+  .favorite-products {
+    grid-template-columns: repeat(2, 1fr);
+  }
+}
+@media (min-width: 1000px) {
+  .favorite-products {
+    grid-template-columns: repeat(3, 1fr);
+  }
+}
+.favorite-products .favorite-product {
+  background: #ffffff;
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+.favorite-products .favorite-product .favorite-content {
+  padding: 8px;
+}
+.favorite-products .favorite-product .favorite-content .favorite-price {
+  display: flex;
+  justify-content: space-between;
+}
+.favorite-products .favorite-product .favorite-content .favorite-price h5 {
+  font-style: normal;
+  font-weight: 700;
+  font-size: 1.125rem;
+  line-height: 150%;
+  color: #414141;
+}
+.favorite-products .favorite-product .favorite-content .favorite-price h6 {
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #606060;
+}
+.favorite-products .favorite-product .favorite-content .favorite-payment {
+  display: flex;
+  justify-content: space-between;
+}
+.favorite-products .favorite-product .favorite-content .favorite-payment p {
+  font-weight: 400;
+  font-size: 0.75rem;
+  line-height: 150%;
+  color: #bfbfbf;
+}
+.favorite-products .favorite-product .favorite-description p {
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #414141;
+}
+.favorite-products .favorite-product .favorite-button button {
+  margin-top: 16px;
+  padding: 8px;
+  width: 100%;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 1rem;
+  line-height: 150%;
+  color: #70c05b;
+  border: 1px solid #70c05b;
+  border-radius: 4px;
+  transition: 0.3s;
+}
+.favorite-products .favorite-product .favorite-button button:hover {
+  color: #ffffff;
+  background: #ff6633;
+  border-radius: 4px;
+}
+.favorite-products .favorite-product .favorite-button button:focus {
+  outline: none;
+}
+
+.favorite-products .search-card {
+  background: #ffffff;
+  /* Default/XS */
+  box-shadow: 1px 2px 4px rgba(0, 0, 0, 0.1);
+  border-radius: 4px;
+}
+.favorite-products .search-content {
+  padding: 8px;
 }
