--- a/style.scss
+++ b/style.scss
@@ -471,7 +471,7 @@ footer {
 			}
 		}
 		gap: 35px 35px;
-		button {
+		button, a {
 			border: none;
 			background-color: transparent;
 			font-style: normal;
